--- a/public/css/discover-works.css
+++ b/public/css/discover-works.css
@@ -78,7 +78,7 @@ html {
 .skinny-menu[data-icon='true'] .skinny-menu__item__text {
   display: none;
 }
-@media (min-width: 550px) {
+@media (min-width: 590px) {
   .skinny-menu[data-icon='true'] .skinny-menu__item__text {
     display: inline;
   }
@@ -87,20 +87,34 @@ html {
   }
 }
 .thick-menu {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
   font-weight: 600;
   letter-spacing: 2px;
   font-family: 'Raleway';
   text-transform: uppercase;
+  white-space: nowrap;
+  overflow: auto;
+}
+.thick-menu::-webkit-scrollbar {
+  display: none;
 }
 .thick-menu__item {
   color: #000;
-  padding: 0.5rem 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  display: table-cell;
+}
+.thick-menu__item:not(:first-child) {
+  padding-left: 1rem;
+}
+.thick-menu__item:not(:last-child) {
+  padding-right: 1rem;
+}
+.carousel {
+  height: 2rem;
+  overflow: hidden;
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 1rem;
 }
 .facebook-button {
   color: #fff;
@@ -222,6 +236,36 @@ html {
 .button-wish-list.active {
   color: #ccc;
 }
+.button-featured {
+  color: #fff;
+  font-family: 'Raleway';
+  letter-spacing: 1px;
+  padding: 0.25rem 0.5rem;
+  font-weight: 600;
+  font-size: 0.75rem;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background: #ff6e40;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.button-featured.disabled {
+  background: #ddd;
+  color: #333;
+}
+.button-featured.admin {
+  cursor: pointer;
+}
 .logo {
   padding: 0.5rem 1rem;
   display: table-cell;
@@ -230,15 +274,20 @@ html {
   max-width: 2rem;
 }
 .logo__normal {
-  max-width: 14rem;
+  max-width: 11rem;
   display: none;
 }
-@media (min-width: 350px) {
+@media (min-width: 300px) {
   .logo__small {
     display: none;
   }
   .logo__normal {
     display: block;
+  }
+}
+@media (min-width: 450px) {
+  .logo__normal {
+    max-width: 13.5rem;
   }
 }
 .separator-text {
@@ -316,6 +365,12 @@ html {
   color: #585858;
   letter-spacing: 0.5px;
 }
+.navigation-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+}
 .input {
   font-size: 1rem;
   padding: 0.5em;
@@ -355,7 +410,8 @@ html {
   color: #808080;
 }
 .double-range__slider {
-  padding-bottom: 0.25rem;
+  font-size: 1.25rem;
+  padding-top: 1rem;
 }
 .double-range__values {
   display: -webkit-box;
@@ -370,6 +426,11 @@ html {
   -ms-flex-pack: justify;
   -webkit-justify-content: space-between;
   justify-content: space-between;
+}
+@media (min-width: 1100px) {
+  .double-range__slider {
+    font-size: 0.8rem;
+  }
 }
 .slogan {
   padding: 1rem;
@@ -548,7 +609,6 @@ html {
   }
 }
 .works {
-  min-height: 700px;
   padding: 0 0.5rem;
   overflow: hidden;
   max-width: 1100px;
@@ -563,10 +623,21 @@ html {
   -o-transition: box-shadow ease-in-out 125ms;
   -ms-transition: box-shadow ease-in-out 125ms;
   transition: box-shadow ease-in-out 125ms;
+  position: relative;
 }
 .works .work:hover {
   -webkit-box-shadow: rgba(0,0,0,0.35) 0 0 10px;
   box-shadow: rgba(0,0,0,0.35) 0 0 10px;
+}
+.works .work__featured {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 @media screen and (min-width: 151px) and (max-width: 300px) {
   .works[data-columns]::before {
@@ -621,8 +692,29 @@ html {
 }
 .more {
   max-width: 1100px;
-  margin: auto;
+  margin: 1rem auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.more.hide {
+  display: none;
+}
+.loading {
   text-align: center;
+  display: none;
+  margin: 2rem;
+  font-size: 2rem;
+  color: #aaa;
 }
 .filters-menu {
   margin: auto;
@@ -753,18 +845,21 @@ html {
   -ms-transform: translate(0%, 0);
   transform: translate(0%, 0);
 }
+.works-container__works {
+  min-height: 700px;
+}
 @media (min-width: 1100px) {
   .works-container__works.moveLeft {
-    padding-left: 10rem;
+    padding-left: 12rem;
   }
   .works-container__works.moveRight {
-    padding-right: 10rem;
+    padding-right: 12rem;
   }
 }
 .filters {
   font-family: 'Raleway';
   font-size: 0.85rem;
-  width: 9rem;
+  width: 11rem;
 }
 .filters__title {
   padding: 0.5rem 1rem;
@@ -788,11 +883,11 @@ html {
 .filters .filter.selected {
   background: #ededed;
 }
-.filters__price,
-.filters__fueatured {
-  padding: 1rem 0.5rem;
+.filters__price {
+  padding: 1rem 1rem 2rem 1rem;
 }
 .filters__fueatured {
+  padding: 1rem 0.5rem;
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -805,4 +900,17 @@ html {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+}
+.navigation {
+  padding: 1rem;
+  text-align: center;
+  max-width: 1100px;
+  margin: auto;
+}
+.navigation .button-solid {
+  margin: 0.5rem;
+}
+.category-menu {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
 }
