--- a/public/stylus/discover-artists.styl
+++ b/public/stylus/discover-artists.styl
@@ -89,3 +89,5 @@
 @import 'objects/more.styl'
 @import 'objects/footer.styl'
 @import 'objects/login.styl'
+@import 'objects/navigation.styl'
+@import 'objects/category-menu.styl'
