--- a/public/stylus/discover-works.styl
+++ b/public/stylus/discover-works.styl
@@ -105,3 +105,5 @@
 @import 'objects/works.styl'
 @import 'objects/more.styl'
 @import 'objects/filters.styl'
+@import 'objects/navigation.styl'
+@import 'objects/category-menu.styl'
