--- a/public/stylus/elements/texts.styl
+++ b/public/stylus/elements/texts.styl
@@ -148,3 +148,13 @@
 	font-size 1.5rem
 	color #585858
 	letter-spacing 0.5px
+
+
+/*------------------------------------*
+	$ NAVIGATION TEXT
+*------------------------------------*/
+.navigation-text
+	font-family 'Oswald'
+	font-size 1.5rem
+	color #585858
+	letter-spacing 0.5px
