--- a/public/stylus/elements/variables.styl
+++ b/public/stylus/elements/variables.styl
@@ -2,9 +2,10 @@
 /*------------------------------------------------------------------------------------------------------------*
 	$ DEPURADO---------------------------------------------------------------------------------------------------
 *------------------------------------------------------------------------------------------------------------*/
-mobile-medium = 350px	// Mobile Medium
+mobile-medium = 300px	// Mobile Medium
 // tablet = 500px				// Tablet
-tablet = 550px				// Tablet
+tablet = 590px				// Tablet
+// tablet = 600px				// Tablet
 tablet-medium = 720px // Tablet Medium
 desktop = 920px 			// Desktop
 
