--- a/public/stylus/market.styl
+++ b/public/stylus/market.styl
@@ -18,3 +18,5 @@
 @import 'objects/footer.styl'
 @import 'objects/login.styl'
 @import 'objects/category-menu.styl'
+@import 'objects/navigation.styl'
+	
