--- a/public/stylus/objects/filters.styl
+++ b/public/stylus/objects/filters.styl
@@ -68,6 +68,8 @@
 			transform translate(-120%, 0)
 			&.visible
 				transform translate(0%, 0)
+	&__works
+		min-height 700px
 				
 @media (min-width: max-width)
 	.works-container
@@ -75,11 +77,11 @@
 			// transition padding .5s
 			// transition padding ease-in-out .5s
 			&.moveLeft
-				// padding-left 12rem
-				padding-left 10rem
+				padding-left 12rem
+				// padding-left 10rem
 			&.moveRight
-				// padding-right 12rem
-				padding-right 10rem
+				padding-right 12rem
+				// padding-right 10rem
 		// &__works.moveLeft.moveRight
 			// font-size .7rem
 
@@ -90,7 +92,8 @@
 .filters
 	font-family 'Raleway'
 	font-size .85rem
-	width 9rem
+	// width 9rem
+	width 11rem
 	&__title
 		padding .5rem 1rem
 		font-weight 600
@@ -112,8 +115,8 @@
 			// background rgba(#f54545, .5)
 				
 	&__price
+		padding 1rem 1rem 2rem 1rem
 	&__fueatured
 		padding 1rem .5rem
-	&__fueatured
 		display flex
 		align-items center
