--- a/public/stylus/objects/navigation.styl
+++ b/public/stylus/objects/navigation.styl
@@ -1,12 +1,8 @@
-.slogan
+.navigation
 	padding 1rem
 	text-align center
 	max-width max-width
 	margin auto
-	// display none
 	.button-solid
 		margin .5rem
-
-// @media (min-width desktop)
-// 	.slogan
-// 		display block
+		
