--- a/public/stylus/objects/products.styl
+++ b/public/stylus/objects/products.styl
@@ -82,10 +82,10 @@ product-width = 180px
 			flex 1 25%
 			max-width 25%
 			
-	// .products.smallLeft.smallRight
-	// 	.product-wrapper
-	// 		flex 1 33.333%
-	// 		max-width 33.333%
+	.products.smallLeft.smallRight
+		.product-wrapper
+			flex 1 33.333%
+			max-width 33.333%
 
 
 /*------------------------------------*
