--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -246,3 +246,26 @@
 .button-wish-list
 	&.active
 		color #ccc
+		
+
+/*------------------------------------*
+	$ BUTTON FEATURED
+*------------------------------------*/
+.button-featured
+	color white
+	font-family 'Raleway'
+	letter-spacing 1px
+	padding .25rem .5rem
+	font-weight 600
+	font-size .75rem
+	border-radius 4px
+	// background #3000ff
+	background #FF6E40
+	display flex
+	align-items center
+	&.disabled
+		background #ddd
+		color #333
+	&.admin
+		cursor pointer
+		
