--- a/public/stylus/elements/logos.styl
+++ b/public/stylus/elements/logos.styl
@@ -12,9 +12,9 @@
 	&__small
 		max-width 2rem
 	&__normal
-		// max-width 10rem
+		max-width 11rem
 		// max-width 15rem
-		max-width 14rem
+		// max-width 14rem
 		display none
 
 @media (min-width mobile-medium)
@@ -22,3 +22,7 @@
 		display none
 	.logo__normal
 		display block
+
+@media (min-width 450px)
+	.logo__normal
+		max-width 13.5rem
