--- a/public/stylus/objects/more.styl
+++ b/public/stylus/objects/more.styl
@@ -1,4 +1,14 @@
 .more
 	max-width max-width
-	margin auto
+	margin 1rem auto
+	display flex
+	justify-content center
+	&.hide
+		display none
+	
+.loading
 	text-align center
+	display none
+	margin 2rem
+	font-size 2rem
+	color #aaa
